--- a/WebChoose/Views/Shared/_Layout.cshtml
+++ b/WebChoose/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="~/images/favicon.png">
-	<title>@ViewBag.Title - СОВА</title>
+	<title>@ViewBag.Title - ТИтаП</title>
 
 	<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="~/Content/vendor.css" rel="stylesheet" type="text/css" />
@@ -36,6 +36,7 @@
 			</div>
 			<div class="top-nav clearfix">
 				<!--search & user info start-->
+				<span style="font-size: 25px;">@ViewBag.Title</span>
 				<ul class="nav pull-right top-menu">
 				</ul>
 				<!--search & user info end-->
@@ -68,8 +69,10 @@
 	<script src="~/Scripts/jquery-ui.min.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
 	<script src="~/Scripts/moment-with-locales.min.js"></script>
+	<script src="~/Scripts/sweetalert.min.js"></script>
 	<script src="~/Scripts/vendor.js"></script>
 	<script src="~/Scripts/init.js"></script>
+	<script src="~/Scripts/common.js"></script>
 
 	@RenderSection("scripts", required: false)
 
