Add some changes

--- a/WebChoose/Views/Criterion/Index.cshtml
+++ b/WebChoose/Views/Criterion/Index.cshtml
@@ -2,11 +2,11 @@
     ViewBag.Title = "Критерии";
 }
 
-@Html.CreateBootstrapTable("~/criterion/items", new List<ColumnItem>
+@Html.CreateBootstrapTable(Url.Action("Items"), new List<ColumnItem>
 {
 	new ColumnItem("Name", "Название"),
-	new ColumnItem("Name", "Тип"),
-	new ColumnItem("Name", "Оптимальность"),
-	new ColumnItem("Name", "Единицы измерения"),
-	new ColumnItem("Name", "Тип шкалы")
+	new ColumnItem("Type", "Тип"),
+	new ColumnItem("OptimType", "Оптимальность"),
+	new ColumnItem("Edlzmer", "Единицы измерения"),
+	new ColumnItem("ScaleType", "Тип шкалы")
 })
