Create views for alternative

--- a/WebChoose/Views/Alternative/Manage.cshtml
+++ b/WebChoose/Views/Alternative/Manage.cshtml
@@ -1,7 +1,7 @@
-﻿@model DAL.Models.Criterion
+﻿@model DAL.Models.Alternative
 
 @{
-	ViewBag.Title = (Model.Id == 0 ? "Создание" : "Редактирование") + " критерия";
+	ViewBag.Title = (Model.Id == 0 ? "Создание" : "Редактирование") + " алтенативы";
 }
 
 @using (Html.BeginForm())
