--- a/WebChoose/Views/Alternative/Index.cshtml
+++ b/WebChoose/Views/Alternative/Index.cshtml
@@ -2,11 +2,4 @@
     ViewBag.Title = "Альтернативы";
 }
 
-@Html.CreateBootstrapTable(Url.Action("Items"), new List<ColumnItem>
-{
-	new ColumnItem("Name", "Название"),
-	new ColumnItem("Type", "Тип"),
-	new ColumnItem("OptimType", "Оптимальность"),
-	new ColumnItem("Edlzmer", "Единицы измерения"),
-	new ColumnItem("ScaleType", "Тип шкалы")
-})
+@Html.CreateBootstrapTable(Url.Action("Items"), (List<ColumnItem>)ViewBag.Columns)
