--- a/WebChoose/Views/LPR/Details.cshtml
+++ b/WebChoose/Views/LPR/Details.cshtml
@@ -24,3 +24,4 @@
 </dl>
 
 <button class="btn btn-danger" id="delete-item" type="button" data-deletelink="@Url.Action("Delete", new {id = Model.Id})">Удалить ЛПР</button>
+<a class="btn btn-success" id="edit-item" href="@Url.Action("Manage", new {id = Model.Id})">Редактировать ЛПР</a>
