--- a/WebChoose/Views/Criterion/Details.cshtml
+++ b/WebChoose/Views/Criterion/Details.cshtml
@@ -64,3 +64,4 @@
 </dl>
 
 <button class="btn btn-danger" id="delete-item" type="button" data-deletelink="@Url.Action("Delete", new {id = Model.Id})">Удалить критерий</button>
+<a class="btn btn-success" id="edit-item" href="@Url.Action("Manage", new {id = Model.Id})">Редактировать критерий</a>
