--- a/WebChoose/Views/Mark/Details.cshtml
+++ b/WebChoose/Views/Mark/Details.cshtml
@@ -48,3 +48,4 @@
 </dl>
 
 <button class="btn btn-danger" id="delete-item" type="button" data-deletelink="@Url.Action("Delete", new {id = Model.Id})">Удалить оценку</button>
+<a class="btn btn-success" id="edit-item" href="@Url.Action("Manage", new {id = Model.Id})">Редактировать оценку</a>
