--- a/WebChoose/Views/Criterion/Details.cshtml
+++ b/WebChoose/Views/Criterion/Details.cshtml
@@ -5,61 +5,33 @@
 }
 
 <dl class="dl-horizontal">
-	<dt>
-		@Html.DisplayNameFor(model => model.Name)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Name)
 
-	<dd>
-		@Html.DisplayFor(model => model.Name)
-	</dd>
+	@Html.DisplayFor(model => model.Name)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Range)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Range)
 
-	<dd>
-		@Html.DisplayFor(model => model.Range)
-	</dd>
+	@Html.DisplayFor(model => model.Range)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Weight)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Weight)
 
-	<dd>
-		@Html.DisplayFor(model => model.Weight)
-	</dd>
+	@Html.DisplayFor(model => model.Weight)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Type)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Type)
 
-	<dd>
-		@Html.DisplayFor(model => model.Type)
-	</dd>
+	@Html.DisplayFor(model => model.Type)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.OptimType)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.OptimType)
 
-	<dd>
-		@Html.DisplayFor(model => model.OptimType)
-	</dd>
+	@Html.DisplayFor(model => model.OptimType)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Edlzmer)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Edlzmer)
 
-	<dd>
-		@Html.DisplayFor(model => model.Edlzmer)
-	</dd>
+	@Html.DisplayFor(model => model.Edlzmer)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.ScaleType)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.ScaleType)
 
-	<dd>
-		@Html.DisplayFor(model => model.ScaleType)
-	</dd>
+	@Html.DisplayFor(model => model.ScaleType)
 
 </dl>
 
