--- a/WebChoose/Views/LPR/Details.cshtml
+++ b/WebChoose/Views/LPR/Details.cshtml
@@ -5,21 +5,13 @@
 }
 
 <dl class="dl-horizontal">
-	<dt>
-		@Html.DisplayNameFor(model => model.Name)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Name)
 
-	<dd>
-		@Html.DisplayFor(model => model.Name)
-	</dd>
+	@Html.DisplayFor(model => model.Name)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Range)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Range)
 
-	<dd>
-		@Html.DisplayFor(model => model.Range)
-	</dd>
+	@Html.DisplayFor(model => model.Range)
 
 </dl>
 
