--- a/WebChoose/Views/Mark/Details.cshtml
+++ b/WebChoose/Views/Mark/Details.cshtml
@@ -5,45 +5,25 @@
 }
 
 <dl class="dl-horizontal">
-	<dt>
-		@Html.DisplayNameFor(model => model.CriterionId)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.CriterionId)
 
-	<dd>
-		@Html.DisplayFor(model => model.Criterion.Name)
-	</dd>
+	@Html.DisplayFor(model => model.Criterion.Name)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Name)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Name)
 
-	<dd>
-		@Html.DisplayFor(model => model.Name)
-	</dd>
+	@Html.DisplayFor(model => model.Name)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.Range)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.Range)
 
-	<dd>
-		@Html.DisplayFor(model => model.Range)
-	</dd>
+	@Html.DisplayFor(model => model.Range)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.NumMark)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.NumMark)
 
-	<dd>
-		@Html.DisplayFor(model => model.NumMark)
-	</dd>
+	@Html.DisplayFor(model => model.NumMark)
 
-	<dt>
-		@Html.DisplayNameFor(model => model.NormMark)
-	</dt>
+	@Html.CustomDisplayNameFor(model => model.NormMark)
 
-	<dd>
-		@Html.DisplayFor(model => model.NormMark)
-	</dd>
+	@Html.DisplayFor(model => model.NormMark)
 
 </dl>
 
