Add data initialize

--- a/WebChoose/Views/Home/Index.cshtml
+++ b/WebChoose/Views/Home/Index.cshtml
@@ -1,7 +1,55 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "МОДЕЛЮВАННЯ ЗАДАЧ БАГАТОКРИТЕРІАЛЬНОГО ПРИЙНЯТТЯ РІШЕНЬ";
 }
 
-<h2>Index</h2>
+	<h2 class="text-center">Лабораторна робота №1</h2>
+	<div class="row">
+		<div class="col-md-12">
+			<h2 class="mini-stat clearfix">Виконали студенти:</h2>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<div class="mini-stat clearfix">
+				<span class="mini-stat-icon orange"><i class="fa fa-user"></i></span>
+				<div class="mini-stat-info">
+					<span>Станіслав</span>
+					Задорожній
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="mini-stat clearfix">
+				<span class="mini-stat-icon tar"><i class="fa fa-user"></i></span>
+				<div class="mini-stat-info">
+					<span>Володимир</span>
+					Гаврилов
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="mini-stat clearfix">
+				<span class="mini-stat-icon pink"><i class="fa fa-user"></i></span>
+				<div class="mini-stat-info">
+					<span>Валерій</span>
+					Моргун
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="mini-stat clearfix">
+				<span class="mini-stat-icon green"><i class="fa fa-user"></i></span>
+				<div class="mini-stat-info">
+					<span>Ігор</span>
+					Малицький
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<img src="~/images/1480239689122783219.gif" class="center-block"/>
+		</div>
+	</div>
 
