--- a/WebChoose/Views/Home/Index.cshtml
+++ b/WebChoose/Views/Home/Index.cshtml
@@ -3,7 +3,15 @@
     ViewBag.Title = "МОДЕЛЮВАННЯ ЗАДАЧ БАГАТОКРИТЕРІАЛЬНОГО ПРИЙНЯТТЯ РІШЕНЬ";
 }
 
-	<h2 class="text-center">Лабораторна робота №1</h2>
+<h2 class="text-center">Лабораторні роботи</h2>
+<h2>
+	<b>Лабораторна робота №2</b> - З використанням функції корисності – лінійне аддитиве
+	згортання з нормуючими множниками. Нормування оцінок
+	проводити з урахуванням еталону.
+</h2>
+<h2>
+	<b>Лабораторна робота №3</b> - Правило Кондерсє + Правило Копленда.
+</h2>
 	<div class="row">
 		<div class="col-md-12">
 			<h2 class="mini-stat clearfix">Виконали студенти:</h2>
@@ -29,8 +37,8 @@
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="mini-stat clearfix">
-				<span class="mini-stat-icon pink"><i class="fa fa-user"></i></span>
+			<div class="mini-stat clearfix" style="background: #dad9d9 !important;">
+				<span class="mini-stat-icon"><i class="fa fa-user"></i></span>
 				<div class="mini-stat-info">
 					<span>Валерій</span>
 					Моргун
@@ -38,8 +46,8 @@
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="mini-stat clearfix">
-				<span class="mini-stat-icon green"><i class="fa fa-user"></i></span>
+			<div class="mini-stat clearfix" style="background: #dad9d9 !important;">
+				<span class="mini-stat-icon"><i class="fa fa-user"></i></span>
 				<div class="mini-stat-info">
 					<span>Ігор</span>
 					Малицький
