--- a/WebChoose/Views/Result/Step2.cshtml
+++ b/WebChoose/Views/Result/Step2.cshtml
@@ -24,13 +24,16 @@
 			{
 				for (int i = 0; i < criterion.Value.Length; i++)
 				{
+					var border = i == 0 ?
+						"style=border-top-width:3px;"
+						: string.Empty;
 					<tr>
 						@if (i == 0)
 						{
-							<td rowspan="@criterion.Value.Length">@criterion.Key</td>
+							<td rowspan="@criterion.Value.Length" @border>@criterion.Key</td>
 						}
-						<td>@criterion.Value[i].Name</td>
-						<td>
+						<td @border>@criterion.Value[i].Name</td>
+						<td @border>
 							<input type="hidden" name="mark[@count].Key" value="@criterion.Value[i].Id"/>
 							<input name="mark[@(count++)].Value" value="@criterion.Value[i].NumMark" min="0" type="number" class="form-control" required="required" step="1"/>
 
